# stiffer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: codeql-analysis.yml
reader/: main.cpp
tests/: main.cpp
writer/: main.cpp
